force-app/main/default/objects/ActiveCamp__CXA_Usage__c/ActiveCamp__CXA_Usage__c.object-meta.xml
<CustomObject>
    <description>Used for metrics and usage of the page layout components inside the ActiveCampaign managed package.</description>
    <label>CXA Usage</label>
    <nameField>
        <label>CXA Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CXA Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>