force-app/main/default/objects/ActiveCamp__CXA_Usage__c/fields/ActiveCamp__Enter_Into_Automation_Usage_Failure__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Enter_Into_Automation_Usage_Failure__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enter Into Automation Usage Failure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>