force-app/main/default/objects/ActiveCamp__CXA_Usage__c/fields/ActiveCamp__One_Time_Email_Usage__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__One_Time_Email_Usage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>One Time Email Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>